--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
       - checkout
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - ruby/rubocop-check:
           app-dir: ~/goggles_api
           label: Rubocop
@@ -76,7 +76,7 @@ jobs:
       - checkout
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - run:
           name: Brakeman
           command: |
@@ -91,7 +91,7 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - run:
           <<: *common-db-setup
       - run:
@@ -109,13 +109,13 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - run:
           <<: *common-db-setup
       - run:
           name: RSpec - A..F
           command: |
-            TEST_FILES=$(circleci tests glob "spec/**/a*_spec.rb,spec/**/b*_spec.rb,spec/**/c*_spec.rb,spec/**/f*_spec.rb")
+            TEST_FILES=$(circleci tests glob "spec/api/goggles/{a*_spec.rb,b*_spec.rb,c*_spec.rb,f*_spec.rb},spec/commands/*_spec.rb")
             echo "$TEST_FILES" | circleci tests run --command="xargs bundle exec rspec --color --order rand -f doc \
                         --format RspecJunitFormatter -o ~/test-results/rspec-a-f.xml" --verbose --split-by=timings
             ./tmp/cc-test-reporter format-coverage -t simplecov \
@@ -139,13 +139,13 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - run:
           <<: *common-db-setup
       - run:
           name: RSpec - I
           command: |
-            TEST_FILES=$(circleci tests glob "spec/**/i*_spec.rb")
+            TEST_FILES=$(circleci tests glob "spec/api/goggles/i*_spec.rb")
             echo "$TEST_FILES" | circleci tests run --command="xargs bundle exec rspec --color --order rand -f doc \
                         --format RspecJunitFormatter -o ~/test-results/rspec-i.xml" --verbose --split-by=timings
             ./tmp/cc-test-reporter format-coverage -t simplecov \
@@ -169,13 +169,13 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - run:
           <<: *common-db-setup
       - run:
           name: RSpec - L..M
           command: |
-            TEST_FILES=$(circleci tests glob "spec/**/l*_spec.rb,spec/**/m*_spec.rb")
+            TEST_FILES=$(circleci tests glob "spec/api/goggles/{l*_spec.rb,m*_spec.rb}")
             echo "$TEST_FILES" | circleci tests run --command="xargs bundle exec rspec --color --order rand -f doc \
                         --format RspecJunitFormatter -o ~/test-results/rspec-l-m.xml" --verbose --split-by=timings
             ./tmp/cc-test-reporter format-coverage -t simplecov \
@@ -190,7 +190,7 @@ jobs:
             - codeclimate.rspec-l-m.*.json
 
 
-  rspec-S:
+  rspec-R-S:
     <<: *common-config
     parallelism: 3
     steps:
@@ -199,17 +199,17 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - run:
           <<: *common-db-setup
       - run:
-          name: RSpec - S
+          name: RSpec - R..S
           command: |
-            TEST_FILES=$(circleci tests glob "spec/**/s*_spec.rb")
+            TEST_FILES=$(circleci tests glob "spec/api/goggles/{r*_spec.rb,s*_spec.rb}")
             echo "$TEST_FILES" | circleci tests run --command="xargs bundle exec rspec --color --order rand -f doc \
-                        --format RspecJunitFormatter -o ~/test-results/rspec-s.xml" --verbose --split-by=timings
+                        --format RspecJunitFormatter -o ~/test-results/rspec-r-s.xml" --verbose --split-by=timings
             ./tmp/cc-test-reporter format-coverage -t simplecov \
-                        -o "./tmp/codeclimate.rspec-s.$CIRCLE_NODE_INDEX.json"
+                        -o "./tmp/codeclimate.rspec-r-s.$CIRCLE_NODE_INDEX.json"
       - store_test_results:
           path: ~/test-results
       - store_artifacts:
@@ -217,7 +217,7 @@ jobs:
       - persist_to_workspace:
           root: tmp
           paths:
-            - codeclimate.rspec-s.*.json
+            - codeclimate.rspec-r-s.*.json
 
 
   rspec-T-U:
@@ -229,13 +229,13 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - run:
           <<: *common-db-setup
       - run:
           name: RSpec - U
           command: |
-            TEST_FILES=$(circleci tests glob "spec/**/t*_spec.rb,spec/**/u*_spec.rb")
+            TEST_FILES=$(circleci tests glob "spec/api/goggles/{t*_spec.rb,u*_spec.rb}")
             echo "$TEST_FILES" | circleci tests run --command="xargs bundle exec rspec --color --order rand -f doc \
                         --format RspecJunitFormatter -o ~/test-results/rspec-t-u.xml" --verbose --split-by=timings
             ./tmp/cc-test-reporter format-coverage -t simplecov \
@@ -270,7 +270,7 @@ jobs:
       - checkout
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0600
+          key: goggles_api-v0610
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
@@ -326,7 +326,7 @@ workflows:
       - rspec-L-M:
           requires:
             - rspec-A-F
-      - rspec-S:
+      - rspec-R-S:
           requires:
             - rspec-I
       - rspec-T-U:
@@ -336,7 +336,7 @@ workflows:
       - upload-coverage:
           requires:
             - rspec-L-M
-            - rspec-S
+            - rspec-R-S
             - rspec-T-U
 
       - docker-build:
