circleci config debug, run 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,6 +305,8 @@ workflows:
     jobs:
       - persisted-data
       - rspec-A-F
+          requires:
+            - persisted-data
 
       # - brakeman:
       #     requires:
