--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,7 +279,7 @@ jobs:
             ./tmp/cc-test-reporter sum-coverage -o - tmp/codeclimate.*.json | ./tmp/cc-test-reporter upload-coverage --debug --input -
 
 
-  docker-build:
+  docker-latest:
     <<: *common-config
     steps:
       - checkout
@@ -289,27 +289,32 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
-      - when:
-          condition: << pipeline.git.tag >>
-          steps:
-            - run:
-                name: Docker TAGGED prod
-                command: |
-                  echo "Git Tag << pipeline.git.tag >>"
-                  echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-                  docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-                  docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
-                  docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
-      - unless:
-          condition: << pipeline.git.tag >>
-          steps:
-            - run:
-                name: Docker LATEST staging
-                command: |
-                  echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-                  docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-                  docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
-                  docker push $DOCKERHUB_USERNAME/goggles-api:latest
+      - run:
+          name: Docker LATEST staging
+          command: |
+            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
+            docker push $DOCKERHUB_USERNAME/goggles-api:latest
+
+  docker-release:
+    <<: *common-config
+    steps:
+      - checkout
+      - ruby/install-deps:
+          app-dir: ~/goggles_api
+          key: goggles_api-v0610
+      - setup_remote_docker:
+          version: 20.10.14
+          docker_layer_caching: true
+      - run:
+          name: Docker TAGGED prod
+          command: |
+            echo "Git Tag << pipeline.git.tag >>"
+            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
+            docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
 
 
 workflows:
@@ -354,6 +359,20 @@ workflows:
             - rspec-R-S
             - rspec-T-U
 
-      - docker-build:
+      - docker-latest:
           requires:
             - upload-coverage
+          filters:
+            tags:
+              ignore: /.*/
+            branches:
+              only: /.*/
+
+      - docker-release:
+          requires:
+            - upload-coverage
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              ignore: /.*/
