--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,7 +297,7 @@ jobs:
             docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
             docker push $DOCKERHUB_USERNAME/goggles-api:latest
 
-  docker-release:
+  docker-versioned:
     <<: *common-config
     steps:
       - checkout
@@ -327,53 +327,51 @@ workflows:
       - brakeman:
           requires:
             - persisted-data
-      - rubocop:
-          requires:
-            - persisted-data
+      # - rubocop:
+      #     requires:
+      #       - persisted-data
       - zeitwerk:
           requires:
             - persisted-data
 
-      - rspec-A-F:
-          requires:
-            - brakeman
-            - rubocop
-            - zeitwerk
+      # - rspec-A-F:
+      #     requires:
+      #       - brakeman
+      #       - rubocop
+      #       - zeitwerk
 
-      - rspec-I:
-          requires:
-            - brakeman
-            - rubocop
-            - zeitwerk
+      # - rspec-I:
+      #     requires:
+      #       - brakeman
+      #       - rubocop
+      #       - zeitwerk
 
-      - rspec-L-M:
-          requires:
-            - rspec-A-F
-      - rspec-R-S:
-          requires:
-            - rspec-I
-      - rspec-T-U:
-          requires:
-            - rspec-A-F
+      # - rspec-L-M:
+      #     requires:
+      #       - rspec-A-F
+      # - rspec-R-S:
+      #     requires:
+      #       - rspec-I
+      # - rspec-T-U:
+      #     requires:
+      #       - rspec-A-F
 
-      - upload-coverage:
-          requires:
-            - rspec-L-M
-            - rspec-R-S
-            - rspec-T-U
+      # - upload-coverage:
+      #     requires:
+      #       - rspec-L-M
+      #       - rspec-R-S
+      #       - rspec-T-U
 
-      - docker-latest:
-          requires:
-            - upload-coverage
-          filters:
-            branches:
-              only: master
-            tags:
-              ignore: /.*/
+  release-docker-latest:
+    unless: << pipeline.git.tag >>
+    requires:
+      - full-build
+    jobs:
+      - docker-latest
 
-      - docker-release:
-          requires:
-            - upload-coverage
-          filters:
-            tags:
-              only: /.*/
+  release-docker-versioned:
+    when: << pipeline.git.tag >>
+    requires:
+      - full-build
+    jobs:
+      - docker-versioned
