--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,21 +307,18 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
-      - when:
-          condition: << pipeline.git.tag >>
-          steps:
-            - run:
-                name: Docker TAGGED prod
-                command: |
-                  echo "Git Tag << pipeline.git.tag >>"
-                  echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-                  docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-                  docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
-                  docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
+      - run:
+          name: Docker TAGGED prod
+          command: |
+            echo "Git Tag << pipeline.git.tag >>"
+            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
+            docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
 
 
 workflows:
-  full-build:
+  test-build:
     jobs:
       - persisted-data
       - brakeman:
@@ -364,14 +361,30 @@ workflows:
 
   release-docker-latest:
     unless: << pipeline.git.tag >>
-    requires:
-      - full-build
     jobs:
-      - docker-latest
+      - persisted-data
+      - brakeman:
+          requires:
+            - persisted-data
+      - zeitwerk:
+          requires:
+            - persisted-data
+            - brakeman
+      - docker-latest:
+          requires:
+            - zeitwerk
 
   release-docker-versioned:
     when: << pipeline.git.tag >>
-    requires:
-      - full-build
     jobs:
-      - docker-versioned
+      - persisted-data
+      - brakeman:
+          requires:
+            - persisted-data
+      - zeitwerk:
+          requires:
+            - persisted-data
+            - brakeman
+      - docker-versioned:
+          requires:
+            - zeitwerk
