--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,18 @@
 version: 2.1
+parameters:
+  GHA_Actor:
+    type: string
+    default: ""
+  GHA_Action:
+    type: string
+    default: ""
+  GHA_Event:
+    type: string
+    default: ""
+  GHA_Meta:
+    type: string
+    default: ""
+
 orbs:
   ruby: circleci/ruby@2.1.0
 
@@ -292,10 +306,12 @@ jobs:
       - run:
           name: Docker LATEST staging
           command: |
-            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-            docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
-            docker push $DOCKERHUB_USERNAME/goggles-api:latest
+            echo "Git Tag << pipeline.git.tag >>"
+            echo "GHA_Action << pipeline.parameters.GHA_Action >>"
+            # echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+            # docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            # docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
+            # docker push $DOCKERHUB_USERNAME/goggles-api:latest
 
   docker-versioned:
     <<: *common-config
@@ -311,10 +327,11 @@ jobs:
           name: Docker TAGGED prod
           command: |
             echo "Git Tag << pipeline.git.tag >>"
-            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-            docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
-            docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
+            echo "GHA_Action << pipeline.parameters.GHA_Action >>"
+            # echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+            # docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            # docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
+            # docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
 
 
 workflows:
@@ -360,7 +377,7 @@ workflows:
       #       - rspec-T-U
 
   release-docker-latest:
-    unless: << pipeline.git.tag >>
+    unless: << pipeline.parameters.GHA_Action >>
     jobs:
       - persisted-data
       - brakeman:
@@ -375,7 +392,7 @@ workflows:
             - zeitwerk
 
   release-docker-versioned:
-    when: << pipeline.git.tag >>
+    when: << pipeline.parameters.GHA_Action >>
     jobs:
       - persisted-data
       - brakeman:
