--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ parameters:
   GHA_Meta:
     type: string
     default: ""
+  run_workflow_versioned:
+    default: false
+    type: boolean
 
 orbs:
   ruby: circleci/ruby@2.1.0
@@ -335,8 +338,32 @@ jobs:
 
 
 workflows:
+  build-docker-versioned:
+    when: << pipeline.parameters.run_workflow_versioned >>
+    # when:
+    #   equal: [ "release", << pipeline.parameters.GHA_Event >>]
+    jobs:
+      - persisted-data
+      - brakeman:
+          requires:
+            - persisted-data
+      # - zeitwerk:
+      #     requires:
+      #       - persisted-data
+      #       - brakeman
+      - docker-versioned:
+          requires:
+            - brakeman
+          # filters:
+          #   tags:
+          #     only: /^\d+\.\d+\.\d+(-pre\.\d+)?$/
+          #   branches:
+          #     ignore: /.*/
+
   test-and-build-latest:
-    unless: << pipeline.parameters.GHA_Event >>
+    unless: << pipeline.parameters.run_workflow_versioned >>
+    # when:
+    #   equal: [ "release", << pipeline.parameters.GHA_Event >>]
     jobs:
       - persisted-data
       - brakeman:
@@ -380,19 +407,8 @@ workflows:
       - docker-latest:
           requires:
             - brakeman
-
-  build-docker-versioned:
-    when:
-      equal: [ "release", << pipeline.parameters.GHA_Event >>]
-    jobs:
-      - persisted-data
-      - brakeman:
-          requires:
-            - persisted-data
-      # - zeitwerk:
-      #     requires:
-      #       - persisted-data
-      #       - brakeman
-      - docker-versioned:
-          requires:
-            - brakeman
+          # filters:
+          #   tags:
+          #     only: /^\d+\.\d+\.\d+(-pre\.\d+)?$/
+          #   branches:
+          #     ignore: /.*/
