--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,6 @@ parameters:
   GHA_Meta:
     type: string
     default: ""
-  run_workflow_versioned:
-    default: false
-    type: boolean
 
 orbs:
   ruby: circleci/ruby@2.1.0
@@ -339,7 +336,8 @@ jobs:
 
 workflows:
   build-docker-versioned:
-    when: << pipeline.parameters.run_workflow_versioned >>
+    when: << pipeline.git.tag >>
+    # when: << pipeline.parameters.GHA_Event >>
     # when:
     #   equal: [ "release", << pipeline.parameters.GHA_Event >>]
     jobs:
@@ -361,7 +359,8 @@ workflows:
           #     ignore: /.*/
 
   test-and-build-latest:
-    unless: << pipeline.parameters.run_workflow_versioned >>
+    when: << pipeline.git.tag >>
+    # when: << pipeline.parameters.GHA_Event >>
     # when:
     #   equal: [ "release", << pipeline.parameters.GHA_Event >>]
     jobs:
