--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,18 @@
 version: 2.1
-parameters:
-  GHA_Actor:
-    type: string
-    default: ""
-  GHA_Action:
-    type: string
-    default: ""
-  GHA_Event:
-    type: string
-    default: ""
-  GHA_Meta:
-    type: string
-    default: ""
+# Used only by GHA (which are currently unused):
+# parameters:
+#   GHA_Actor:
+#     type: string
+#     default: ""
+#   GHA_Action:
+#     type: string
+#     default: ""
+#   GHA_Event:
+#     type: string
+#     default: ""
+#   GHA_Meta:
+#     type: string
+#     default: ""
 
 orbs:
   ruby: circleci/ruby@2.1.0
@@ -20,8 +21,7 @@ common-config: &common-config
   resource_class: large
   working_directory: ~/goggles_api
   shell: /bin/bash --login
-  # NOTE: make sure ENV vars on CircleCI include CC_TEST_REPORTER_ID
-  #       for CodeClimate test coverage upload!
+  # NOTE: make sure ENV vars on CircleCI include CC_TEST_REPORTER_ID for CodeClimate test coverage upload!
   #       (Otherwise the 'upload-coverage' step will fail.)
   docker:
     - image: cimg/ruby:3.1.4-node
@@ -306,12 +306,10 @@ jobs:
       - run:
           name: Docker LATEST staging
           command: |
-            echo "Git Tag << pipeline.git.tag >>"
-            echo "GHA_Action << pipeline.parameters.GHA_Action >>"
-            # echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-            # docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-            # docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
-            # docker push $DOCKERHUB_USERNAME/goggles-api:latest
+            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .
+            docker push $DOCKERHUB_USERNAME/goggles-api:latest
 
   docker-versioned:
     <<: *common-config
@@ -326,20 +324,15 @@ jobs:
       - run:
           name: Docker TAGGED prod
           command: |
-            echo "Git Tag << pipeline.git.tag >>"
-            echo "GHA_Action << pipeline.parameters.GHA_Action >>"
-            # echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-            # docker pull $DOCKERHUB_USERNAME/goggles-api:latest
-            # docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
-            # docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
+            echo "Git Tag: << pipeline.git.tag >>"
+            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+            docker pull $DOCKERHUB_USERNAME/goggles-api:latest
+            docker build -t $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >> --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .
+            docker push $DOCKERHUB_USERNAME/goggles-api:prod-<< pipeline.git.tag >>
 
 
 workflows:
   build-docker-versioned:
-    # when: << pipeline.git.tag >>
-    # when: << pipeline.parameters.GHA_Event >>
-    # when:
-    #   equal: ["release", << pipeline.parameters.GHA_Event >>]
     jobs:
       - persisted-data:
           filters:
@@ -374,10 +367,6 @@ workflows:
               ignore: /.*/
 
   test-and-build-latest:
-    # unless: << pipeline.parameters.GHA_Event >>
-    # when: << pipeline.git.tag >>
-    # when:
-    #   equal: ["release", << pipeline.parameters.GHA_Event >>]
     jobs:
       - persisted-data
       - brakeman:
@@ -390,41 +379,34 @@ workflows:
           requires:
             - persisted-data
 
-      # - rspec-A-F:
-      #     requires:
-      #       - brakeman
-      #       - rubocop
-      #       - zeitwerk
-
-      # - rspec-I:
-      #     requires:
-      #       - brakeman
-      #       - rubocop
-      #       - zeitwerk
-
-      # - rspec-L-M:
-      #     requires:
-      #       - rspec-A-F
-      # - rspec-R-S:
-      #     requires:
-      #       - rspec-I
-      # - rspec-T-U:
-      #     requires:
-      #       - rspec-A-F
-
-      # - upload-coverage:
-      #     requires:
-      #       - rspec-L-M
-      #       - rspec-R-S
-      #       - rspec-T-U
-
-      - docker-latest:
+      - rspec-A-F:
           requires:
             - brakeman
             - rubocop
             - zeitwerk
-          # filters:
-          #   tags:
-          #     only: /^\d+\.\d+\.\d+(-pre\.\d+)?$/
-          #   branches:
-          #     ignore: /.*/
+
+      - rspec-I:
+          requires:
+            - brakeman
+            - rubocop
+            - zeitwerk
+
+      - rspec-L-M:
+          requires:
+            - rspec-A-F
+      - rspec-R-S:
+          requires:
+            - rspec-I
+      - rspec-T-U:
+          requires:
+            - rspec-A-F
+
+      - upload-coverage:
+          requires:
+            - rspec-L-M
+            - rspec-R-S
+            - rspec-T-U
+
+      - docker-latest:
+          requires:
+            - upload-coverage
